--- a/Exercicios/Projeto ReactJs 08/calculator/src/index.css
+++ b/Exercicios/Projeto ReactJs 08/calculator/src/index.css
@@ -21,6 +21,7 @@ body{
   min-height: 100vh;
   align-items: center;
   justify-content: center;
+  padding: 16px;
 }
 .calculator{
   width: 100%;
@@ -57,5 +58,26 @@ button{
 }
 
 button:hover{
-  
+ opacity: 0.9;
+ 
+}
+
+.operators {
+  display: flex;
+}
+
+.operators button{
+  flex: 1 1 0%;
+  background-color: var(--primary);
+  font-weight: 700;
+}
+.digits{
+  display: flex;
+  flex-wrap: wrap;
+
+}
+.digits button{
+  flex: 1 1 33.333%;
+  max-width: 33.333%;
+  background-color: var(--dark);
 }
